# ytui-music

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  installer.bash
.github/workflows/: actions.yml  release-action.yml
announcements/: announcement-latest.json
config/: Cargo.toml  default_mpv_options.conf  initilize.rs  lib.rs  sample_config.json
config/src/: default_mpv_options.conf  initialize.rs  invidious_servers.list  lib.rs
fetcher/: Cargo.toml
fetcher/src/: lib.rs  utils.rs
front-end/: Cargo.toml
front-end/data/: config.json
front-end/src/: about.txt  cli.rs  communicator.rs  help_keys.txt  help_message.txt  info_config.txt  main.rs  test_backend.rs
front-end/src/test-data/: artist_sample.json  playlist_sample.json  trending.json
front-end/src/ui/: event.rs  mod.rs  utils.rs
invidious-rusty/: Cargo.toml
invidious-rusty/src/: lib.rs
invidious-rusty/src/invidious/: mod.rs
invidious-rusty/src/invidious/types/: attachments.rs  common.rs  playlists.rs  region.rs  video.rs
stream-mandu/: Cargo.toml
stream-mandu/src/: lib.rs
stream-mandu/src/common_interface/: mod.rs  types.rs
stream-mandu/src/invidious/: common_interface_impl.rs  mod.rs
stream-mandu/src/invidious/types/: api_info.rs  attachments.rs  mod.rs  playlists.rs  video.rs
stream-mandu/src/web_client/: async_reqwest_impl.rs  mod.rs
ytui-audio/: Cargo.toml
ytui-audio/src/: lib.rs  libmpv.rs
ytui-invidious/: Cargo.toml
ytui-invidious/res/: search_response.json
ytui-invidious/src/invidious/: mod.rs  web_client.rs
ytui-invidious/src/invidious/types/: channel.rs  common.rs  mod.rs  params.rs  playlists.rs  video.rs
ytui-music/: Cargo.toml
ytui-music/src/: data_source.rs  main.rs
ytui-music/src/data_sink/: app_announcement.rs  impl_data_getter.rs  mod.rs
ytui-music/src/data_source/: impl_artist_query.rs  impl_audio_request.rs  impl_data_requester.rs  impl_playlist_query.rs  impl_search_query.rs  impl_trending_query.rs  mod.rs
ytui-music/src/ui/: event_handler.rs  mod.rs
ytui-ui/: Cargo.toml
ytui-ui/src/: dimension.rs  lib.rs  renderer.rs  state.rs
ytui-ui/src/components/: artist_pane.rs  mod.rs  music_pane.rs  navigation_list.rs  overlay.rs  playlist_pane.rs  progressbar.rs  queue_list.rs  searchbar.rs  state_badge.rs  statusbar.rs  window_border.rs
