[workspace]
resolver = "2"
members = [
  "stream-mandu",
  "ytui-audio",
  "ytui-ui",
  "ytui-music", 
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12", features = ["stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
async-trait = { version = "*" }
smallvec = { version = "*" }
