[package]
name = "config"
version = "1.0.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
lazy_static = "1.4.0"
rusqlite = { version = "0.26", features = ["modern_sqlite"] }

[lib]
name = "config"
path = "src/lib.rs"
