[package]
name = "config"
version = "2.0.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
lazy_static = "1.4.0"
rand = "0.8"
rusqlite = { version = "0.28", features = ["bundled", "extra_check", "winsqlite3"] }

[lib]
name = "config"
path = "src/lib.rs"
