[package]
name = "fetcher"
version = "2.0.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio  = { version = "1", features = ["full"] }
config = { path = "../config" }
