[package]
name = "ytui_music"
version = "2.0.0-beta"
edition = "2021"
authors = ["Sudip Ghimire <sudipghimire533@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0.20", features = ["event-stream"] }
tui = { version = "0.16", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libmpv = { version = "2.0.1" }
fetcher = { path = "../fetcher" }
lazy_static = "1.4.0"
config = { path = "../config" }
reqwest = { version = "0.11", features = ["json", "gzip"] }
