[package]
name = "stream-mandu"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, optional = true }

[features]
invidious = []
common-interface = []
web-reqwest = ["dep:reqwest"]
default = ["web-reqwest", "invidious"]

[dev-dependencies]
stream-mandu = { path = "./", features = ["default", "common-interface"]}
