[package]
name = "ytui-invidious"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { version = "1" }

reqwest = { version = "0.12", optional = true }

[features]
web-reqwest = ["dep:reqwest"]
default = ["web-reqwest"]


[dev-dependencies]
ytui-invidious = { path = "./", features = ["web-reqwest"] }
reqwest = { version = "0.12", features = ["blocking"]}
tokio = { version = "1", features = ["full"]}
