[package]
name = "ytui-music"
version = "0.1.0"
edition = "2021"

[dependencies]
ytui-ui = { path = "../ytui-ui/" }
ytui-audio = { path = "../ytui-audio/", features = ["libmpv"] }
stream-mandu = { path = "../stream-mandu/", features = ["web-reqwest", "invidious", "common-interface"] }
crossterm = { version = "*" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fastrand = { version = "2" }
smallvec = { workspace = true }
